--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,9 @@
 *.swp
 .DS_Store
 .atom/
-.build/
 .buildlog/
 .history
 .svn/
-.swiftpm/
-migrate_working_dir/
 
 # IntelliJ related
 *.iml
@@ -21,7 +18,7 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -29,9 +26,12 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
+**/failures/*.png
+
 
 # Symbolication related
 app.*.symbols
@@ -39,7 +39,32 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Remember to never publicly share your keystore.
+# See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
+!/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+/fastlane/metadata/envfiles/playstore.json
+/fastlane/metadata/envfiles/wger.properties
+/fastlane/metadata/envfiles/keys.jks
+/fastlane/metadata/envfiles/key.properties
+
+# Others
+/vendor/bundle/ruby/
+/coverage/
+/lib/l10n/generated/
+
+# ios build and fastlane
+ios/fastlane/.env
+ios/fastlane/*.p8
+ios/fastlane/test_output
+ios/fastlane/screenshots
+ios/fastlane/report.xml
+ios/fastlane/Preview.html
+ios/fastlane/output
+ios/Runner.ipa
+ios/Runner.app.dSYM.zip
+
+linux/*
+web/*
+macos/*
+ios/*
+windows/*
